<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- I prefer Constraint Layout which helps us to create a flat view hierarchy -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_welcome_background">

        <ScrollView
            android:id="@+id/scroll_instructions"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scrollbars="none"
            app:layout_constraintBottom_toTopOf="@+id/btn_show_shoe_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/margin_16dp">

                <TextView
                    android:id="@+id/tv_title"
                    style="@style/TitleStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_title_welcome" />

                <TextView
                    style="@style/SubTitleStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:text="@string/label_sub_title_sell_your_best_products" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8dp"
                    android:text="@string/label_description_sell_your_best_products"
                    android:textSize="@dimen/text_size_16" />

                <TextView
                    style="@style/SubTitleStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:text="@string/label_sub_title_know_your_business" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8dp"
                    android:text="@string/label_description_know_your_business"
                    android:textSize="@dimen/text_size_16" />


                <TextView
                    style="@style/SubTitleStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:text="@string/label_sub_title_manage_multiple" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8dp"
                    android:text="@string/label_description_know_your_business"
                    android:textSize="@dimen/text_size_16" />

            </LinearLayout>

        </ScrollView>

        <Button
            android:id="@+id/btn_show_shoe_list"
            style="@style/PrimaryButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_button_height"
            android:layout_margin="@dimen/margin_16dp"
            android:background="@color/colorPrimary"
            android:text="@string/btn_show_shoe_lists"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>