<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="shoeName"
            type="String" />

        <variable
            name="shoeCompany"
            type="String" />

        <variable
            name="shoeDescription"
            type="String" />

        <variable
            name="shoeSize"
            type="String" />

    </data>

    <!-- Using Constraint Layout because it allows us to build complex layout without having to nest many views-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin_16dp">

        <TextView
            android:id="@+id/tv_title"
            style="@style/TitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_shoe_detail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_shoe_name"
            style="@style/LoginLabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24dp"
            android:text="@string/label_shoe_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <EditText
            android:id="@+id/et_shoe_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@={shoeName}"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_shoe_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_shoe_name"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/tv_company"
            style="@style/LoginLabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_36dp"
            android:text="@string/label_company"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_shoe_name" />

        <EditText
            android:id="@+id/et_company_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="text"
            android:text="@={shoeCompany}"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_company"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/et_shoe_name"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/tv_shoe_size"
            style="@style/LoginLabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_36dp"
            android:text="@string/label_shoe_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_company" />

        <EditText
            android:id="@+id/et_shoe_size"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:text="@={shoeSize}"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_shoe_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/et_company_name"
            tools:ignore="LabelFor,TextFields" />

        <TextView
            android:id="@+id/tv_description"
            style="@style/LoginLabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_76dp"
            android:text="@string/label_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_shoe_size" />

        <EditText
            android:id="@+id/et_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:maxLines="10"
            android:minLines="5"
            android:text="@={shoeDescription}"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/et_shoe_size"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/btn_cancel"
            style="@style/SecondaryButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24dp"
            android:text="@string/label_cancel"
            app:layout_constraintEnd_toStartOf="@+id/btn_save"
            app:layout_constraintHorizontal_bias="0.631"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_description" />

        <Button
            android:id="@+id/btn_save"
            style="@style/PrimaryButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="68dp"
            android:text="@string/label_save"
            app:layout_constraintBaseline_toBaselineOf="@+id/btn_cancel"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>