<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_welcome_background">

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scrollbars="none"
            app:layout_constraintBottom_toTopOf="@+id/btn_navigate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/margin_16dp">

                <TextView
                    android:id="@+id/tv_title"
                    style="@style/TitleStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_title_welcome" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:lineHeight="@dimen/line_height"
                    android:text="@string/label_description_welcome"
                    android:textSize="@dimen/text_size_18"
                    tools:ignore="UnusedAttribute" />

            </LinearLayout>

        </ScrollView>

        <Button
            android:id="@+id/btn_navigate"
            style="@style/PrimaryButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_button_height"
            android:layout_margin="@dimen/margin_16dp"
            android:background="@color/colorPrimary"
            android:text="@string/btn_read_instructions"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>