<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Using Constraint Layout because it allows us to build complex layout without having to nest many views-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_login_background"
        android:padding="@dimen/margin_16dp">

        <ImageView
            android:layout_width="@dimen/size_logo"
            android:layout_height="@dimen/size_logo"
            android:scaleType="centerCrop"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toTopOf="@+id/et_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_email"
            style="@style/LoginLabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_email"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8dp"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_password"
            tools:ignore="LabelFor,TextFields" />

        <TextView
            android:id="@+id/tv_password"
            style="@style/LoginLabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24dp"
            android:text="@string/label_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_email" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8dp"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_password"
            tools:ignore="LabelFor,TextFields" />

        <Button
            android:id="@+id/btn_login"
            style="@style/PrimaryButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/login_button_height"
            android:layout_marginTop="@dimen/margin_16dp"
            android:text="@string/label_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password" />

        <Button
            android:id="@+id/btn_sign_up"
            style="@style/PrimaryButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_button_height"
            android:background="@color/colorPrimary"
            android:text="@string/label_create_an_account"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>